done login and sign up

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,4 +17,8 @@
     <strong>Ready to create an app?</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
+
+    <app-custom-button text="Sign In" customClass="signInButton"></app-custom-button>
+    <app-custom-button text="Sign Up" customClass="signInButton"></app-custom-button>
+
 </ion-content>
