--- a/src/global.scss
+++ b/src/global.scss
@@ -57,3 +57,7 @@
   font-weight: normal;
   font-style: normal;
 }
+
+.input-fill-outline.sc-ion-input-md-h .input-outline-container.sc-ion-input-md{
+  --height:80% !important;
+}
