--- a/src/app/custom-button/custom-button.component.scss
+++ b/src/app/custom-button/custom-button.component.scss
@@ -5,7 +5,12 @@ ion-button {
     --box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.4);
     --padding-top: 12px;
     --padding-bottom: 12px;
-    --border-radius: 10px;
+    --border-radius: 5px;
+    user-select: none;
+    text-transform: none;
+    height: 40px;
     width: 100%;
-    font-size: 16px;
+    font-size: 14px;
+    cursor: pointer;
+
 }
