added router link

--- a/src/app/custom-button/custom-button.component.html
+++ b/src/app/custom-button/custom-button.component.html
@@ -1,2 +1,3 @@
-
-<ion-button [ngClass]="customClass">{{ text }}</ion-button>
+<a [routerLink]="routerLink">
+    <ion-button [ngClass]="customClass">{{ text }}</ion-button>
+</a>
