--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,7 +18,12 @@
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
 
+  <a routerLink="/login">
     <app-custom-button text="Sign In" customClass="signInButton"></app-custom-button>
+  </a>
+  
+  <a routerLink="/login">
     <app-custom-button text="Sign Up" customClass="signInButton"></app-custom-button>
-
+  </a>
+  
 </ion-content>
