--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -2,8 +2,10 @@
 // http://ionicframework.com/docs/theming/
 
 :root {
-    --ion-background-color: #F9F2ED;
+    
+    // --ion-background-color: #F9F2ED;
     --ion-card-background: #ffffff;
+    --ion-button-border-radius: 10px;
 }
 
 // :root {
@@ -18,3 +20,4 @@
 //     --ion-card-background: #f4f4f4;
 //     /* Card background color */
 // }
+
