--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,67 @@
-#container {
-  text-align: center;
+.background-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  padding: 20px;
+  overflow: hidden;
+  width: 100%;
 
+}
+
+.background-image {
   position: absolute;
+  top: 0;
   left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.content-overlay {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  width: 100%;
+  padding-right: 5px;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.title-container {
+  margin-bottom: 30px;
+  text-align: center;
 }
 
-#container a {
-  text-decoration: none;
+h1 {
+  font-size: 24px;
+  font-weight: 400;
+  margin-top: 230px;
+  line-height: 1.2;
+  color: white;
+}
+
+.highlight {
+  font-size: 50px;
+  font-family: "Limelight", sans-serif;
+  font-weight: bold;
+}
+
+.description {
+  font-size: 12px;
+  color: white;
+  text-align: center;
+  margin:0;
+  font-weight: lighter;
+}
+.second-description{
+  margin-bottom: 150px;
+}
+
+a{
+  margin-bottom: 5px;
 }
