--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -5,6 +5,7 @@ ion-content {
     flex-direction: column;
     height: 100vh;
     padding: 20px;
+    --background:#F9F2ED;
 }
 
 ion-icon.btnBack {
@@ -58,16 +59,18 @@ a {
 
     &:focus {
         border-color: #59392c;
-        box-shadow: 0 0 10px rgba(89, 57, 44, 0.5);
+        box-shadow: 0 0 10px rgba(89, 57, 44, 0.3);
     }
 }
 
 .username-input {
     padding-right: 12px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .password-input {
     padding-right: 45px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .eye-icon {
