--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,5 @@
+
 <ion-content class="ion-padding background-container">
-  <img src="/assets/images/onboarding.png" alt="Background" class="background-image" />
   <div class="content-overlay">
     <div class="title-container">
       <h1>Ready for a <br><span class="highlight">DejaBrew</span><br>moment?</h1>
@@ -7,12 +7,14 @@
       <p class="second-description description">worth repeating.</p>
     </div>
 
-    <a routerLink="/login">
-      <app-custom-button text="Sign In" customClass="signInButton"></app-custom-button>
-    </a>
+    <div class="button-container">
+      <a routerLink="/login">
+        <app-custom-button text="Sign In" customClass="signInButton"></app-custom-button>
+      </a>
 
-    <a routerLink="/signup">
-      <app-custom-button text="Register" customClass="signUpButton"></app-custom-button>
-    </a>
+      <a routerLink="/signup">
+        <app-custom-button text="Register" customClass="signUpButton"></app-custom-button>
+      </a>
+    </div>
   </div>
 </ion-content>
