--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -9,7 +9,9 @@
 
     <h2>
       <span class="title">DejaBrew</span>
+      <img src="assets/images/CoffeeBean.png" alt="Logo" class="h2-image" />
     </h2>
+
 
     <ion-card class="card-padding">
 
@@ -44,7 +46,7 @@
 
       
       <!-- custom button component -->
-      <app-custom-button text="Sign Up" customClass="signInButton"></app-custom-button>
+      <app-custom-button text="Register" customClass="signInButton"></app-custom-button>
 
 
     </ion-card>
