--- a/src/global.scss
+++ b/src/global.scss
@@ -40,10 +40,13 @@
 /* Import Poppins font */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Bacasime+Antique&display=swap');
+
 
 :root {
   --ion-font-family: 'Poppins', sans-serif;
   --ion-mode: ios;
   --ion-input-border-radius: 10px;
+  
 }
 
