--- a/src/app/custom-button/custom-button.component.scss
+++ b/src/app/custom-button/custom-button.component.scss
@@ -1,7 +1,7 @@
 ion-button {
     --background: #59392C;
     --border-color: #59392C;
-    --color: White;
+    --color: white;
     --box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.4);
     --padding-top: 12px;
     --padding-bottom: 12px;
@@ -12,6 +12,13 @@ ion-button {
     width: 100%;
     font-size: 14px;
     cursor: pointer;
-
+    transition: all 0.3s ease;
 }
 
+ion-button:hover {
+    --background: #5e4032;
+}
+
+ion-button:active {
+    --background: #4A2D21;
+}
