--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -7,16 +7,8 @@
   padding: 20px;
   overflow: hidden;
   width: 100%;
-
-}
-
-.background-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
+  background: var(--background);
+  --background: url('/assets/images/homebg.png') no-repeat center center / cover;
 }
 
 .content-overlay {
@@ -24,44 +16,48 @@
   z-index: 2;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
-  justify-content: center;
+  justify-content: space-between;
+
   text-align: center;
   color: white;
   width: 100%;
-  padding-right: 5px;
+  height: 100%;
+  padding: 15px;
 }
 
 .title-container {
-  margin-bottom: 30px;
-  text-align: center;
+  margin-top: auto;
 }
 
 h1 {
-  font-size: 24px;
+  font-size: 36px;
   font-weight: 400;
-  margin-top: 230px;
-  line-height: 1.2;
+  line-height: 1.1;
   color: white;
+  font-family: "Bacasime Antique", serif;
 }
 
 .highlight {
-  font-size: 50px;
-  font-family: "Limelight", sans-serif;
-  font-weight: bold;
+  font-size: 64px;
+  font-family: "Bacasime Antique", serif;
+  font-style: bold;
+  font-weight: 400;
 }
 
 .description {
   font-size: 12px;
-  color: white;
-  text-align: center;
-  margin:0;
+  color: #ccc;
+  margin: 0;
   font-weight: lighter;
 }
-.second-description{
-  margin-bottom: 150px;
+
+.second-description {
+  margin-bottom: 20px;
 }
 
-a{
-  margin-bottom: 5px;
+.button-container {
+  margin-top: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
