--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -9,7 +9,9 @@
 
     <h2>
       <span class="title">DejaBrew</span>
+      <img src="assets/images/CoffeeBean.png" alt="Logo" class="h2-image" />
     </h2>
+
 
     <ion-card class="card-padding">
 
