--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -106,11 +106,26 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 35px;
+    font-size: 52px;
     margin-top: 10px;
     margin-bottom: 10px;
-    font-family: "Limelight", sans-serif;
+    font-family: "Bacasime Antique", serif;
+    font-style: normal;
     font-weight: 400;
+    position: relative;
+}
+
+h2 .title {
+    font-weight: bold;
+    margin-right: 8px;
+}
+
+.h2-image {
+    width: 18px;
+    height: 18px;
+    margin-top: 25px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 h2 span {
