--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -216,3 +216,60 @@ label {
     margin-top: 20px;
     font-size:12px
 }
+a:hover {
+    text-decoration: underline;
+}
+
+
+.modal-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.modal-content {
+    background: white;
+    border-radius: 10px;
+    padding: 20px;
+    width: 80%;
+    max-width: 400px;
+    text-align: center;
+    --box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.4);
+}
+
+ion-icon {
+    font-size: 3rem;    
+}
+
+.modal-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin: 10px 0;
+    color: #633E27;
+}
+
+.modal-text {
+    font-size: 12px;
+    color: #666;
+    margin-bottom: 20px;
+}
+
+.modal-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+ion-button {
+    --border-color: #633E27;
+    --color: #633E27;
+    --box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.4);
+    text-transform: none;
+}
