--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,63 +1,8 @@
-.background-container {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  padding: 20px;
-  overflow: hidden;
-  width: 100%;
-  background: var(--background);
-  --background: url('/assets/images/homebg.png') no-repeat center center / cover;
-}
-
-.content-overlay {
-  position: relative;
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-
-  text-align: center;
-  color: white;
-  width: 100%;
-  height: 100%;
-  padding: 15px;
-}
-
-.title-container {
-  margin-top: auto;
-}
-
-h1 {
-  font-size: 36px;
-  font-weight: 400;
-  line-height: 1.1;
-  color: white;
-  font-family: "Bacasime Antique", serif;
-}
-
-.highlight {
-  font-size: 64px;
-  font-family: "Bacasime Antique", serif;
-  font-style: bold;
-  font-weight: 400;
-}
-
-.description {
-  font-size: 12px;
-  color: #ccc;
-  margin: 0;
-  font-weight: lighter;
-}
-
-.second-description {
-  margin-bottom: 20px;
-}
-
-.button-container {
-  margin-top: auto;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
+::ng-deep product-card-component .product-image {
+    height: 500px;
+    /* New height for product image */
+    width: auto;
+    /* Adjust width if needed */
+    object-fit: contain;
+    object-position: center;
 }
