--- a/src/app/signup/signup.page.html
+++ b/src/app/signup/signup.page.html
@@ -1,5 +1,5 @@
 <ion-content class="ion-padding">
-  <app-back-button></app-back-button>
+  <app-back-button path="/onboarding-4"></app-back-button>
 
   <div class="ion-text-center">
     <p class="text-head">
