--- a/src/global.scss
+++ b/src/global.scss
@@ -42,6 +42,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bacasime+Antique&display=swap');
 
+@import "~swiper/swiper-bundle.min.css";
+
 
 :root {
   --ion-font-family: 'Poppins', sans-serif;
