--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,7 +3,7 @@
 
 :root {
     
-    // --ion-background-color: #F9F2ED;
+    --ion-background-color: #F9F2ED;
     --ion-card-background: #ffffff;
     --ion-button-border-radius: 10px;
 }
