--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,8 +1,60 @@
-::ng-deep product-card-component .product-image {
-    height: 500px;
-    /* New height for product image */
-    width: auto;
-    /* Adjust width if needed */
-    object-fit: contain;
-    object-position: center;
+ion-header {
+    --background: #332218;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    overflow: hidden;
+}
+
+.combined-toolbar {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: space-between;
+    padding: 10px;
+    --background: #332218;
+    color: #fff;
+
+    .top-section {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .logo {
+        width: 40px;
+        height: 40px;
+        object-fit: contain;
+    }
+
+    .title {
+        font-size: 18px;
+        font-weight: bold;
+        color: #fff;
+        margin: 0 auto;
+        text-align: left;
+        padding: 5px;
+    }
+
+    ion-icon {
+        font-size: 24px;
+        color: var(--ion-color-light);
+    }
+
+    .description {
+        font-size: 12px;
+        font-weight: 300;
+        margin: 0px 10px;
+        text-align: left;
+        color: #fff;
+    }
+
+    .search-bar {
+        --background: #D9D9D9;
+        --placeholder-color: var(--ion-color-medium);
+        --color: var(--ion-color-dark);
+        --border-radius: 50px;
+        margin-top: 5px;
+        padding: 10px;
+    }
+
 }
