--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -10,17 +10,17 @@
         <h2 class="product-title">{{product.title}}</h2>
       </div>
 
-      <!-- Row 1, Column 2: Product Image -->
+      <!-- Product Image -->
       <img [src]="product.productImageUrl" class="product-image" [alt]="product.title" loading="lazy" />
     </div>
 
-    <!-- Row 2, Column 1: Price -->
+    <!--  Price -->
     <div class="product-price-container">
       <div class="product-price">
         ₱ {{product.price}}
       </div>
 
-      <!-- Row 2, Column 2: Favorite Button -->
+      <!-- Favorite Button -->
       <span (click)="toggleFavorite()" [ngClass]="product.favorite ? 'heart-filled' : 'heart-empty'" class="favorite-icon">
         <ion-icon name="heart"></ion-icon>
       </span>
